--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@ __pycache__/
 # C extensions
 *.so
 
+# credit_default dataset
+credit_default.xls
+
+# models folder
+models/
+
 # Distribution / packaging
 .Python
 build/
