--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 fastapi==0.120.4
 scikit-learn==1.7.2
 pandas==2.3.3
+xlrd==2.0.2
+ipykernel==7.1.0
+matplotlib==3.10.7
+seaborn==0.13.2
+catboost==1.2.8
