--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,19 @@
-fastapi==0.120.4
+fastapi==0.121.0
 uvicorn[standard]==0.29.0
-pydantic==2.10.4
+pydantic==2.12.4
 scikit-learn==1.7.2
 pandas==2.3.3
+numpy==1.26.4
 xlrd==2.0.2
-python-multipart==0.0.9
+python-multipart==0.0.20
 cloudpickle==3.1.2
 ipykernel==7.1.0
 matplotlib==3.10.7
 seaborn==0.13.2
-catboost==1.2.8
-pytest==8.3.3
-pytest-asyncio==0.23.8
+catboost==1.2.5
+pytest==8.4.2
+pytest-asyncio==1.2.0
 httpx==0.27.2
+streamlit==1.51.0
+shap==0.49.1
+ipywidgets==8.1.8
